--- a/src/views/style/home.css
+++ b/src/views/style/home.css
@@ -15,7 +15,7 @@ body {
   }
 }
 
-.application-container {
+.products-container {
   font-family: Inter;
   position: relative;
   box-sizing: border-box;
@@ -26,59 +26,112 @@ body {
   margin: 24px;
 }
 
-.saleschannel-title {
+.title {
   font-weight: 700;
-  font-size: 20px;
-  margin-bottom: 8px;
+  font-size: 25px;
+  text-align: center;
 }
 
-.search-box {
-  margin-top: 20px;
-}
- 
-.sales-channels-container {
-  display: grid;
-  grid-template-columns: 25% 25% 25% 25%;
-  grid-column-gap: 18px;
-  grid-row-gap: 18px;
-  margin-top: 20px;
-  width: calc(100% - 54px);
+.section {
+  margin: 40px 0px 20px 0px;
 }
 
-.app-box {
-  background-color: #ffffff;
-  border: 1px solid #e4e5e6;
-  padding: 20px;
-  border-radius: 12px;
-}
-
-.app-box .logo {
-  width: 48px;
-  height: 48px;
-}
-
-.app-box .logo img {
-  width: 100%;
-  height: auto;
-}
-
-.app-box .line-1 {
+.section .heading {
+  font-size: 22px;
+  line-height: 21px;
+  display: flex;
+  flex-direction: row;
+  gap: 6px;
   font-weight: 600;
-  font-size: 16px;
-  line-height: 26px;
-  margin-top: 20px;
 }
 
-.app-box .line-2 {
-  color: #9b9b9b;
-  line-height: 22px;
+.section .heading a {
+  text-decoration: none;
+  color: #2e31be;
+  &:hover {
+    text-decoration: underline;
+  }
+}
+
+.section .description {
+  font-size: 14px;
+  color: #666;
+  line-height: 21px;
+  padding-top: 8px;
+}
+
+.product-list-container {
+  display: flex;
+  border: 1px solid #e4e5e6;
+  -webkit-font-smoothing: antialiased;
+  min-height: 102px;
+  padding: 16px;
+  border-radius: 4px;
+  margin-bottom: 16px;
+  box-sizing: border-box;
+}
+
+.flex-column {
+  display: flex;
+  flex-direction: column;
+}
+
+.flex-row {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 10px;
+}
+
+.mr-r-12 {
+  margin-right: 12px;
+}
+
+.card-avatar {
+  min-height: 60px;
+  min-width: 60px;
+  max-height: 60px;
+  max-width: 60px;
+  display: flex;
+  align-items: center;
+}
+
+.card-avatar img {
+  width: 100%;
+  height: 60px;
+  object-fit: cover;
+  border-radius: 50%;
+}
+
+.flex-column {
+  display: flex;
+  flex-direction: column;
+}
+
+.product-name {
+  font-weight: 600;
+  font-size: 14px;
+  color: #41434c;
+  line-height: 21px;
+}
+
+.product-item-code {
+  font-weight: 400;
   font-size: 12px;
+  color: #9b9b9b;
 }
 
-.app-box + .app-box:nth-child(3n + 1) {
-  margin-left: 0;
+.product-brand-name {
+  font-weight: 400;
+  font-size: 12px;
+  color: #666;
+  line-height: 21px;
+  display: flex;
+  flex-direction: row;
+  gap: 2px;
 }
 
-.hidden {
-  visibility: hidden;
+.cl-RoyalBlue {
+  color: #2e31be;
+  margin-left: 2px;
 }
